--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,6 +5,7 @@
   width: 100%;
   margin-top: 45px;
   display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 641px) {
