--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @import url(./blocks/page/__container/page__container.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__email/header__email.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile.avatar.css);
@@ -31,6 +34,7 @@
 @import url(./blocks/popup/_background_transparent/popup_background_transparent.css);
 @import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__title-success/popup__title-success.css);
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__form/_type_less-top-margin/popup__form_type_less-top-margin.css);
 @import url(./blocks/popup/__input-field/popup__input-field.css);
@@ -45,3 +49,10 @@
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/__title-card/popup__title-card.css);
 @import url(./blocks/popup/__card-container/popup__card-container.css);
+@import url(./blocks/popup/__image-tooltip/popup__image-tooltip.css);
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__title/auth__title.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__input/auth__input.css);
+@import url(./blocks/auth/__button/auth__button.css);
+@import url(./blocks/auth/__link/auth__link.css);
